# MDPI-Assignment-

./: README.md  pyproject.toml
app/: SQLAlchemy_CRUD.py  create_tables.py  database.py  extract.py  extract_class.py  main.py  mdpi_key  mdpi_key.pub  models.py  nebo  nebo.pub  pandas_examples.py  schemas.py
tests/: test_1.py  tests.py
