[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Nebojsa Dimic <nsd4@rice.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.24"
pydantic = "^2.5.3"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.25.0"
ruff = "^0.1.9"
polars = "0.19.7"
pandas = "^2.1.4"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
# Support Python 3.10+.
requires-python = ">=3.10"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 89

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.

select = [
      "ANN",     # flake8-annotations
      "D",       # pydocstyle
      "E",       # pycodestyle
      "F",       # Pyflakes
      ]
ignore = [
      "ANN101",  # missing-type-self
      "D107",    # undocumented-public-init, 
      "E722",    # do not use bare 'except"
      "E711",    # comparison to None shoudl be cond is None, 
      "D104",    # Missing docstring in public package
    ]

[tool.ruff.pydocstyle]
convention = "google"
